# medium-clone-exam

./: .gitignore  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 361570c269b1_fixed_tabless.py
app/: database.py  dependencies.py  middleware.py  settings.py  tasks.py
app/admin/: auth.py  settings.py  views.py
app/models/: article.py  user.py
app/routers/: article.py  auth.py  digest.py  users.py
app/schemas/: article.py  user.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: index.html
app/utils/: dependencies.py  security.py
